[package]
name = "swap-solana"
version = "0.1.0"
edition = "2021"
description = "Solana program for on-chain discount factor bootstrap and valuation"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
swap-core = { path = "../core" }
ethnum = { workspace = true }
solana-program = "=2.0.24"
borsh = "=1.5.3"
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"
